<resources>
    <string name="app_name">Food Runner</string>
    <string name="mobile_number">Phone number</string>
    <string name="password">Password</string>
    <string name="prefix">+91</string>
    <string name="login">LOGIN</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="new_registration">New Registration</string>
    <string name="wrong_username">Unauthorised Username</string>
    <string name="wrong_mobile_number">Unauthorised Mobile Number</string>
    <string name="wrong_password">Unauthorised password</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="eamilSuffix">.com</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="confirm_password">Confirm password</string>
    <string name="error_register">These needs to be same</string>
    <string name="get_password">Get password</string>
    <string name="home">Home</string>
    <string name="favourite">Favourite Restaurants</string>
    <string name="profile">My Profile</string>
    <string name="faq">FAQ</string>
    <string name="logout">Logout</string>
    <string name="open_draw">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <string name="Term_n_policy">By clicking Resister you agree to our  \n<b><u>Terms of Service</u></b> and have read our <b><u>Privacy Policy</u></b></string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="resend_otp">Please check your SMS to get the OTP \n Please don\'t share it with anyone</string>
</resources>