<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/home"
            android:icon="@drawable/home"
            android:title="@string/home"/>
        <item
            android:id="@+id/profile"
            android:icon="@drawable/person"
            android:title="@string/profile" />
        <item
            android:id="@+id/favourite"
            android:icon="@drawable/favourite_unchecked"
            android:title="@string/favourite" />

        <item
            android:id="@+id/faq"
            android:icon="@drawable/help"
            android:title="@string/faq" />
        <item
            android:id="@+id/logout"
            android:icon="@drawable/logout"
            android:title="@string/logout" />
    </group>
</menu>