<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".activity.LoginActivity">

    <ImageView
        android:id="@+id/imgAppLogo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:src="@drawable/app_icon"/>

    <TextView
        android:id="@+id/txtAppName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/imgAppLogo"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="5dp"
        android:fontFamily="@font/chewy"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/colorContrast"
        android:textSize="40sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edtlName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtAppName"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="10dp"
        android:hint="@string/name"
        android:textColorHint="@color/colorContrast"
        app:boxCornerRadiusBottomEnd="20dp"
        app:boxCornerRadiusBottomStart="20dp"
        app:boxCornerRadiusTopEnd="20dp"
        app:boxCornerRadiusTopStart="20dp"
        app:boxStrokeColor="@color/colorSecondary"
        app:boxStrokeWidth="3dp"
        app:hintTextColor="@color/colorContrast"
        app:startIconDrawable="@drawable/person"
        app:startIconTint="@color/colorSecondary"
        app:errorEnabled="true"
        app:errorTextColor="@color/colorError"
        app:errorIconDrawable="@drawable/error"
        app:errorIconTint="@color/colorError"
        app:boxStrokeErrorColor="@color/colorError">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/chewy"
            android:inputType="textPersonName"
            android:maxLines="1"
            android:textColor="@color/colorContrast"
            android:textSize="18sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edtlEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edtlName"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="10dp"
        android:hint="@string/email"
        android:textColorHint="@color/colorContrast"
        app:boxCornerRadiusBottomEnd="20dp"
        app:boxCornerRadiusBottomStart="20dp"
        app:boxCornerRadiusTopEnd="20dp"
        app:boxCornerRadiusTopStart="20dp"
        app:boxStrokeColor="@color/colorSecondary"
        app:boxStrokeWidth="3dp"
        app:hintTextColor="@color/colorContrast"
        app:prefixTextColor="@color/colorContrast"
        app:startIconContentDescription="mobile number"
        app:startIconDrawable="@drawable/email"
        app:startIconTint="@color/colorSecondary"
        app:errorEnabled="true"
        app:errorTextColor="@color/colorError"
        app:errorIconDrawable="@drawable/error"
        app:errorIconTint="@color/colorError"
        app:boxStrokeErrorColor="@color/colorError">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/chewy"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:textColor="@color/colorContrast"
            android:textSize="18sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnGetPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edtlEmail"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/chewy"
        android:letterSpacing="0.2"
        android:text="@string/get_password"
        android:textColor="@color/colorContrast"
        android:textSize="20sp"
        android:textStyle="bold"
        app:strokeColor="@color/colorSecondary"
        app:strokeWidth="3dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/resend_otp"
        android:layout_below="@id/btnGetPassword"
        android:textAlignment="center"
        android:textStyle="normal"
        android:fontFamily="@font/chewy"
        android:textSize="16sp"
        android:textColor="@color/colorSecondary"/>

<!--    <ImageView-->
<!--        android:id="@+id/imgForest"-->
<!--        android:layout_width="119dp"-->
<!--        android:layout_height="198dp"-->
<!--        android:layout_alignParentBottom="true"-->
<!--        android:layout_marginStart="10dp"-->
<!--        android:src="@drawable/forgot" />-->

</RelativeLayout>